Cause of gap between section 1 (header) and sections 2, 3, and 4 unknown. Cause of lack of padding between section 5 (footer) and bottom of page. Cause of lack of Twitter and Facebook share buttons unknown. Maybe will be resolved when uploaded to Github.

--- a/main/styles.scss
+++ b/main/styles.scss
@@ -18,7 +18,6 @@ $countCharLeft: 19ch;
 
 .item1 { grid-area: header;
 	box-sizing: border-box;
-	padding-bottom: 1%;
 	border-bottom-style: solid;
 	font-family: $textFontTitleContenttitleNetworkinglinksLatestpostsAdjacentpostsHeadersLinks
 	
@@ -63,7 +62,6 @@ $countCharLeft: 19ch;
 	padding-top: 0;
 	box-sizing: border-box;
 	min-width: $countCharLeft;
-	
 	h3 {
 		margin-top: 0;
 		font-family: $textFontTitleContenttitleNetworkinglinksLatestpostsAdjacentpostsHeadersLinks;
@@ -74,7 +72,6 @@ $countCharLeft: 19ch;
 	#links {
 		max-width: $countCharLeft;
 	}
-
 }
 
 .item3 { grid-area: columnCenter;
@@ -85,10 +82,6 @@ $countCharLeft: 19ch;
 	border-left-width: 1px;
 	#contentTitle {
 		max-width: $countCharCenter;
-		/*h2 {
-			margin-bottom: 0;
-			margin-top: 0;
-		}*/
 		a {
 			font-family: $textFontTitleContenttitleNetworkinglinksLatestpostsAdjacentpostsHeadersLinks;
 			color: $textColorContenttitlesHeaders;
@@ -112,6 +105,10 @@ $countCharLeft: 19ch;
 	padding-left: 1%;
 	border-left-style: solid;
 	border-left-width: 1px;
+	h3 {
+		font-family: $textFontTitleContenttitleNetworkinglinksLatestpostsAdjacentpostsHeadersLinks;
+		margin-top: 0;
+	}
 }
 
 .item5 { grid-area: footer;
@@ -151,11 +148,6 @@ $countCharLeft: 19ch;
 	'footer footer footer';
 	gap: 1%;
 }
-
-/*p {
-	font-family: $textFontSummaryContent;
-	color: $textColorSummaryContent;
-}*/
 
 h2 {
 	margin-bottom: 0;
@@ -200,11 +192,13 @@ a:hover{
 #tag {
 	font-family: $textFontSummaryContent;
 	color: $textColorSummaryContent;
+	max-width: $countCharCenter;
 }
 
 #references {
 	color: $textColorSummaryContent;
 	font-family: $textFontSummaryContent;
+	max-width: $countCharCenter;
 }
 
 body {
